// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`arguments.js - {"semi":false} format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
console.log(@deco class Foo {})
console.log(@deco class {})

=====================================output=====================================
console.log(
  @deco
  class Foo {},
)
console.log(
  @deco
  class {},
)

================================================================================
`;

exports[`arguments.js - {"semi":false} format[babel]} 2`] = `
"Unexpected token \`@\` (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |"
`;

exports[`arguments.js - {"semi":false} format[babel]} 3`] = `
"Unexpected character '@' (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected character '@' (1:12)"
`;

exports[`arguments.js - {"semi":false} format[babel]} 4`] = `
"Unexpected character '@' (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected character '@'"
`;

exports[`arguments.js - {"semi":false} format[babel]} 5`] = `
"unrecognized character '@' (1:12)
> 1 | console.log(@deco class Foo {})
    |            ^
  2 | console.log(@deco class {})
  3 |
Cause: unrecognized character '@' (1:12)
console.log(@deco class Foo {})
            ^"
`;

exports[`arguments.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
console.log(@deco class Foo {})
console.log(@deco class {})

=====================================output=====================================
console.log(
  @deco
  class Foo {},
);
console.log(
  @deco
  class {},
);

================================================================================
`;

exports[`arguments.js format[babel]} 2`] = `
"Unexpected token \`@\` (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |"
`;

exports[`arguments.js format[babel]} 3`] = `
"Unexpected character '@' (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected character '@' (1:12)"
`;

exports[`arguments.js format[babel]} 4`] = `
"Unexpected character '@' (1:13)
> 1 | console.log(@deco class Foo {})
    |             ^
  2 | console.log(@deco class {})
  3 |
Cause: Unexpected character '@'"
`;

exports[`arguments.js format[babel]} 5`] = `
"unrecognized character '@' (1:12)
> 1 | console.log(@deco class Foo {})
    |            ^
  2 | console.log(@deco class {})
  3 |
Cause: unrecognized character '@' (1:12)
console.log(@deco class Foo {})
            ^"
`;

exports[`class-expression.js - {"semi":false} format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
const a1 = (@deco class Foo {});
const a2 = (@deco class {});

(@deco class Foo {});
(@deco class {});

const b1 = []
;(@deco class Foo {})

const b2 = []
;(@deco class {})

// This is not a \`ClassExpression\` but \`ClassDeclaration\`
@deco class Foo {}

=====================================output=====================================
const a1 =
  @deco
  class Foo {}
const a2 =
  @deco
  class {}

;(
  @deco
  class Foo {}
)
;(
  @deco
  class {}
)

const b1 = []
;(
  @deco
  class Foo {}
)

const b2 = []
;(
  @deco
  class {}
)

// This is not a \`ClassExpression\` but \`ClassDeclaration\`
@deco
class Foo {}

================================================================================
`;

exports[`class-expression.js - {"semi":false} format[babel]} 2`] = `
"Unexpected token \`@\` (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});"
`;

exports[`class-expression.js - {"semi":false} format[babel]} 3`] = `
"Unexpected character '@' (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected character '@' (1:12)"
`;

exports[`class-expression.js - {"semi":false} format[babel]} 4`] = `
"Unexpected character '@' (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected character '@'"
`;

exports[`class-expression.js - {"semi":false} format[babel]} 5`] = `
"unrecognized character '@' (1:12)
> 1 | const a1 = (@deco class Foo {});
    |            ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: unrecognized character '@' (1:12)
const a1 = (@deco class Foo {});
            ^"
`;

exports[`class-expression.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
const a1 = (@deco class Foo {});
const a2 = (@deco class {});

(@deco class Foo {});
(@deco class {});

const b1 = []
;(@deco class Foo {})

const b2 = []
;(@deco class {})

// This is not a \`ClassExpression\` but \`ClassDeclaration\`
@deco class Foo {}

=====================================output=====================================
const a1 =
  @deco
  class Foo {};
const a2 =
  @deco
  class {};

(
  @deco
  class Foo {}
);
(
  @deco
  class {}
);

const b1 = [];
(
  @deco
  class Foo {}
);

const b2 = [];
(
  @deco
  class {}
);

// This is not a \`ClassExpression\` but \`ClassDeclaration\`
@deco
class Foo {}

================================================================================
`;

exports[`class-expression.js format[babel]} 2`] = `
"Unexpected token \`@\` (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});"
`;

exports[`class-expression.js format[babel]} 3`] = `
"Unexpected character '@' (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected character '@' (1:12)"
`;

exports[`class-expression.js format[babel]} 4`] = `
"Unexpected character '@' (1:13)
> 1 | const a1 = (@deco class Foo {});
    |             ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: Unexpected character '@'"
`;

exports[`class-expression.js format[babel]} 5`] = `
"unrecognized character '@' (1:12)
> 1 | const a1 = (@deco class Foo {});
    |            ^
  2 | const a2 = (@deco class {});
  3 |
  4 | (@deco class Foo {});
Cause: unrecognized character '@' (1:12)
const a1 = (@deco class Foo {});
            ^"
`;

exports[`member-expression.js - {"semi":false} format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
(@deco class Foo {}).name;
(@deco class {}).name;

=====================================output=====================================
;(
  @deco
  class Foo {}
).name
;(
  @deco
  class {}
).name

================================================================================
`;

exports[`member-expression.js - {"semi":false} format[babel]} 2`] = `
"Unexpected token \`@\` (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |"
`;

exports[`member-expression.js - {"semi":false} format[babel]} 3`] = `
"Unexpected character '@' (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected character '@' (1:1)"
`;

exports[`member-expression.js - {"semi":false} format[babel]} 4`] = `
"Unexpected character '@' (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected character '@'"
`;

exports[`member-expression.js - {"semi":false} format[babel]} 5`] = `
"unrecognized character '@' (1:1)
> 1 | (@deco class Foo {}).name;
    | ^
  2 | (@deco class {}).name;
  3 |
Cause: unrecognized character '@' (1:1)
(@deco class Foo {}).name;
 ^"
`;

exports[`member-expression.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(@deco class Foo {}).name;
(@deco class {}).name;

=====================================output=====================================
(
  @deco
  class Foo {}
).name;
(
  @deco
  class {}
).name;

================================================================================
`;

exports[`member-expression.js format[babel]} 2`] = `
"Unexpected token \`@\` (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |"
`;

exports[`member-expression.js format[babel]} 3`] = `
"Unexpected character '@' (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected character '@' (1:1)"
`;

exports[`member-expression.js format[babel]} 4`] = `
"Unexpected character '@' (1:2)
> 1 | (@deco class Foo {}).name;
    |  ^
  2 | (@deco class {}).name;
  3 |
Cause: Unexpected character '@'"
`;

exports[`member-expression.js format[babel]} 5`] = `
"unrecognized character '@' (1:1)
> 1 | (@deco class Foo {}).name;
    | ^
  2 | (@deco class {}).name;
  3 |
Cause: unrecognized character '@' (1:1)
(@deco class Foo {}).name;
 ^"
`;

exports[`super-class.js - {"semi":false} format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
class Foo extends (@deco class Foo {}){}

class Foo extends (@deco class {}){}

=====================================output=====================================
class Foo extends (
  @deco
  class Foo {}
) {}

class Foo extends (
  @deco
  class {}
) {}

================================================================================
`;

exports[`super-class.js - {"semi":false} format[babel]} 2`] = `
"Unexpected token \`@\` (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Foo extends (@deco class {}){}
  4 |"
`;

exports[`super-class.js - {"semi":false} format[babel]} 3`] = `
"Unexpected character '@' (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Foo extends (@deco class {}){}
  4 |
Cause: Unexpected character '@' (1:19)"
`;

exports[`super-class.js - {"semi":false} format[babel]} 4`] = `
"Unexpected character '@' (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Foo extends (@deco class {}){}
  4 |
Cause: Unexpected character '@'"
`;

exports[`super-class.js - {"semi":false} format[babel]} 5`] = `
"unrecognized character '@' (1:19)
> 1 | class Foo extends (@deco class Foo {}){}
    |                   ^
  2 |
  3 | class Foo extends (@deco class {}){}
  4 |
Cause: unrecognized character '@' (1:19)
class Foo extends (@deco class Foo {}){}
                   ^"
`;

exports[`super-class.js format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo extends (@deco class Foo {}){}

class Foo extends (@deco class {}){}

=====================================output=====================================
class Foo extends (
  @deco
  class Foo {}
) {}

class Foo extends (
  @deco
  class {}
) {}

================================================================================
`;

exports[`super-class.js format[babel]} 2`] = `
"Unexpected token \`@\` (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Foo extends (@deco class {}){}
  4 |"
`;

exports[`super-class.js format[babel]} 3`] = `
"Unexpected character '@' (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Foo extends (@deco class {}){}
  4 |
Cause: Unexpected character '@' (1:19)"
`;

exports[`super-class.js format[babel]} 4`] = `
"Unexpected character '@' (1:20)
> 1 | class Foo extends (@deco class Foo {}){}
    |                    ^
  2 |
  3 | class Foo extends (@deco class {}){}
  4 |
Cause: Unexpected character '@'"
`;

exports[`super-class.js format[babel]} 5`] = `
"unrecognized character '@' (1:19)
> 1 | class Foo extends (@deco class Foo {}){}
    |                   ^
  2 |
  3 | class Foo extends (@deco class {}){}
  4 |
Cause: unrecognized character '@' (1:19)
class Foo extends (@deco class Foo {}){}
                   ^"
`;
